--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,6 @@
-lightgbm==4.1.0
-scikit-learn==1.3.2
 numpy==1.24.3
+pandas==2.0.3
+scikit-learn==1.3.0
+lightgbm==4.0.0
 joblib==1.3.2
-
+imbalanced-learn==0.11.0
