--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,2 @@
 DB_URL=mysql+pymysql://admin:Te20-tEAMDB@database-1.c2xk4m0ua3bz.us-east-1.rds.amazonaws.com/OfficeEase 
+ALLOWED_ORIGINS=http://localhost:3000,https://officez.app
