--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,21 @@
-numpy==1.24.3
-pandas==2.0.3
-scikit-learn==1.3.0
-lightgbm==4.0.0
+#lightgbm==4.1.0
+#scikit-learn==1.3.2
+#numpy==1.24.3
+#joblib==1.3.2
+ 
+ # ML / data
+lightgbm==4.1.0
+scikit-learn==1.4.2
+numpy==1.26.4
 joblib==1.3.2
-imbalanced-learn==0.11.0
+
+# Web backend
+fastapi==0.111.0
+uvicorn==0.30.1
+
+# Database
+SQLAlchemy==2.0.30
+pymysql==1.1.1
+
+# Env
+python-dotenv==1.0.1
