--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,3 +4,9 @@ scikit-learn==1.3.0
 lightgbm==4.0.0
 joblib==1.3.2
 imbalanced-learn==0.11.0
+fastapi==0.110.0
+uvicorn[standard]==0.30.1
+SQLAlchemy==2.0.31
+PyMySQL==1.1.0
+python-dotenv==1.0.1
+mangum==0.17.0
