--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,12 @@
+# Local Environment Variables
+
+# Database connection (MySQL)
+# This format is required by SQLAlchemy: 
 DB_URL=mysql+pymysql://admin:Te20-tEAMDB@database-1.c2xk4m0ua3bz.us-east-1.rds.amazonaws.com/OfficeEase 
+
+# Allowed Origins for CORS 
+#ALLOWED_ORIGINS=,http://localhost:3000
+ALLOWED_ORIGINS=http://localhost:3000,http://localhost:3001,http://V2-Officeez.vercel.app,http://localhost:5173
+
+# Region name (optional, used by boto3)
+AWS_REGION= us-east-1
