--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,3 @@
-VITE_API_BASE_URL=https://v6xu20yvrg.execute-api.us-east-1.amazonaws.com
+#VITE_API_BASE_URL=https://v6xu20yvrg.execute-api.us-east-1.amazonaws.com
+VITE_API_BASE_URL= "http://localhost:8088"
+
