updated changes with correct db URL

--- a/backend/.env
+++ b/backend/.env
@@ -2,11 +2,19 @@
 
 # Database connection (MySQL)
 # This format is required by SQLAlchemy: 
-DB_URL=mysql+pymysql://admin:Te20-tEAMDB@database-1.c2xk4m0ua3bz.us-east-1.rds.amazonaws.com/OfficeEase 
+DB_URL=mysql+pymysql://admin:Te20-tEAMDB@database-1.c2xk4m0ua3bz.us-east-1.rds.amazonaws.com/OfficeEase
+
 
 # Allowed Origins for CORS 
 #ALLOWED_ORIGINS=,http://localhost:3000
 ALLOWED_ORIGINS=http://localhost:3000,http://localhost:3001,http://V2-Officeez.vercel.app,http://localhost:5173
 
 # Region name (optional, used by boto3)
-AWS_REGION= us-east-1
+AWS_REGION=us-east-1
+
+app.add_middleware(
+    CORSMiddleware,
+    allow_origins=[o.strip() for o in allowed_origins if o.strip()],
+    allow_methods=["*"],
+    allow_headers=["*"],
+)
