--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,8 @@
     "lucide-react": "0.542.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^7.8.2"
+    "react-router-dom": "^7.8.2",
+    "recharts": "^3.2.1"
   },
   "devDependencies": {
     "@playwright/test": "^1.55.0",
