--- a/backend/.env
+++ b/backend/.env
@@ -6,7 +6,8 @@ DB_URL=mysql+pymysql://admin:Te20-tEAMDB@database-1.c2xk4m0ua3bz.us-east-1.rds.a
 
 # Allowed Origins for CORS 
 #ALLOWED_ORIGINS=,http://localhost:3000
-ALLOWED_ORIGINS=http://localhost:3000,http://localhost:3001,http://V2-Officeez.vercel.app,http://localhost:5173
+ALLOWED_ORIGINS=http://localhost:3000,http://localhost:3001,http://127.0.0.1:3000,http://127.0.0.1:3001,http://localhost:5173
+
 
 # Region name (optional, used by boto3)
 AWS_REGION=us-east-1
