--- a/backend/.env
+++ b/backend/.env
@@ -1,17 +1,16 @@
 # Local Environment Variables
 
 # Database connection (MySQL)
-# This format is required by SQLAlchemy: 
-DB_URL=mysql+pymysql://admin:Te20-tEAMDB@database-1.c2xk4m0ua3bz.us-east-1.rds.amazonaws.com/OfficeEase
+
+DB_URL=mysql+pymysql://admin:Te20-tEAMDB@database-1.c2xk4m0ua3bz.us-east-1.rds.amazonaws.com/OfficeEz
 
 # Allowed Origins for CORS 
 #ALLOWED_ORIGINS=,http://localhost:3000
-ALLOWED_ORIGINS=http://localhost:3000,http://localhost:3001,http://127.0.0.1:3000,http://127.0.0.1:3001,http://localhost:5173
+ALLOWED_ORIGINS=http://localhost:3000,http://localhost:3001,http://127.0.0.1:3000,http://127.0.0.1:3001,http://localhost:5173,https://OfficeEz-it3-final.vercel.app
 
 
 # Region name (optional, used by boto3)
 AWS_REGION=us-east-1
-
 app.add_middleware(
     CORSMiddleware,
     allow_origins=[o.strip() for o in allowed_origins if o.strip()],
