--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,30 +1,14 @@
- 
-#  # ML / data
-# #lightgbm==4.1.0
-# scikit-learn==1.4.2
-# numpy==1.26.4
-# joblib==1.3.2
-
-# # Web backend
-# fastapi==0.111.0
-# uvicorn==0.30.1
-
-# # Database
-# SQLAlchemy==2.0.30
-# pymysql==1.1.1
-
-# # Env
-# python-dotenv==1.0.1
-
-
 fastapi==0.111.0
 uvicorn==0.30.1
 SQLAlchemy==2.0.30
 pymysql==1.1.1
 mangum==0.17.0
 python-dotenv==1.0.1
-joblib==1.3.2
+#joblib==1.3.2
 numpy==1.26.4
 pydantic==2.8.2
 boto3==1.34.131
+lightgbm==4.3.0
+scikit-learn==1.4.2
+joblib==1.4.2
 
