--- a/backend/.env
+++ b/backend/.env
@@ -6,7 +6,7 @@ DB_URL=mysql+pymysql://admin:Te20-tEAMDB@database-1.c2xk4m0ua3bz.us-east-1.rds.a
 
 # Allowed Origins for CORS 
 #ALLOWED_ORIGINS=,http://localhost:3000
-ALLOWED_ORIGINS=http://localhost:3000,http://localhost:3001,http://127.0.0.1:3000,http://127.0.0.1:3001,http://localhost:5173,https://OfficeEz-it3-final.vercel.app
+ALLOWED_ORIGINS=http://localhost:3000,http://localhost:3001,http://127.0.0.1:3000,http://127.0.0.1:3001,http://localhost:5173,https://OfficeEz-it3-final.vercel.app,https://it3-officeez-production.vercel.app
 
 
 # Region name (optional, used by boto3)
